--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -23,7 +23,9 @@
 극단적으로, 국방위원회에 성소수자 차별금지를 중시하는 의원 1명이 소속되면 국군 내의 성소수자 색출 문제를 국회에서 논의할 수 있고, 교육위원회에 사립학교 재단 이사 출신 의원 1명이 소속되면 사립학교 운영에 국가가 개입하는 정책의 논의가 질질 끌어질 수 있는 환경이 마련되는 셈이다.
 
 ## 입법부 및 정치, 대통령 관련
-### 국회운영위원회(운영위)
+**국회는 정치를 업무로 삼는 곳이고, 모든 직종이 그렇듯 업무체계와 스케쥴 관리 등에 따라 결과물의 질이 확연히 달라진다. 회사(국회) 바깥에서는 잘 드러나보이지 않겠지만. **
+
+### 국회운영위원회(운영위) #1
 국회운영위원회는 국회의 주요 일정을 결정한다. 언제 국회를 열 것인지, 본회의를 언제 열지, 의사일정 상의 안건을 어떻게 배치할 것인지 등을 국회의장과 함께 협의하는 공간이 된다. 이 과정은 각 당이 원하는 입법안과 예산안이 통과될 가능성을 높이고, 국정을 효과적으로 비판하고 견제하기 위한 전략을 짜는 과정이므로, 국회 바깥에서는 별 관심을 받지 못하지만 국정 전반에 가장 큰 영향력을 끼친다고 할 수 있다. 이 때문에 각 당마다 의원들이 선출한 원내지도부가 운영위 위원이 되어서 치열한 수싸움에 참여한다.
 
 또한 운영위는 국회의 운영과 관련된 사항을 논의한다. 이 논의대상에는 국회의 모든 운영실무를 책임지는 국회사무처와, 국회의원의 의정활동을 돕는 자료/정책/법률 싱크탱크인 국회도서관, 국회예산정책처, 국회입법조사처, 그리고 국회의원 1명과 함께 일하는 보좌관의 운영, 처우, 직무 등의 내용이 포함된다. 국회의원 1명이 유권자의 대표로서 넓고 전반적인 시야를 가지고 그들의 의사를 대변한다면, 이들 기관은 의정활동을 위한 행정처리업무를 돕고, 법률안과 예산안의 세부적인 내용을 자세하게 조사하여 국회의원에게 의견을 전달하는 역할을 한다. 선의를 가진 열정적인 국회의원이 의정업무를 제대로 보려면 이들 기관의 도움이 필수적이므로, 이들에게 역할과 예산을 배분하는 국회 운영위는 소위 '일하는 국회'를 만드는 데에 매우 핵심적인 역할을 한다. 
@@ -35,7 +37,7 @@
 
 특히 2012년부터 이른바 '국회선진화법'(<국회법> 개정안)이 시행되면서, 교섭단체 원내대표가 합의한 법률안은 심사과정을 간소화하여 본회의 안건으로 빠르게 올릴 수 있게 되었다. 법률안 1개를 심사하기 위해 위원회별로 여러 번의 여론 수렴과 의원토론를 거치느라 통상 몇 년씩 시간이 걸린다는 사실을 고려하면, 교섭단체 원내대표의 합의를 이끌어내는 것은 각 당(교섭단체)이 반드시 추진하려는 법안을 실현시키는 훌륭한 방법이다. 따라서 각 당(교섭단체) 원내대표는 국회에서 가장 쟁점이 되는 법안 몇 가지를 묶어서 협상 테이블에 올린다. 이것은 협상이나 야합처럼 보일 수도 있지만, 여론을 반영하여 쟁정법안을 빠르게 처리하는 과정이기도 하다. 2016-2020 국회에서 이렇게 가결된 굵직굵직한 법안이 많다. 2018년의 <산업안전보건법> 개정안(속칭 '김용균법')과 <근로기준법> 개정안(속칭 '주 52시간 근로제'), 2019년의 <도로교통법>과 <주차장법> 개정안(속칭 '민식이·하준이법') 등. 이들은 각 상임위원회에서 오랫동안 합의가 이뤄지지 못한 법안이었으나, 언론과 여론의 관심이 모여 정계 주요이슈로 떠오르자 교섭단체 원내대표 협상을 통해 빠르게 합의가 이루어졌다.
 
-### 법제사법위원회(법사위)-1
+### 법제사법위원회(법사위) #1
 법제사법위원회는 본래 의도와 다르게, 다른 상임위를 통과한 법률안을 지연시키거나 사실상 다른 법률안으로 바꿔버릴 수 있는 막강한 권한을 가지고 있다. 오로지 법사위에만 있는 "법률안 체계·자구 심사" 권한 때문이다. 
 다른 위원회에서 논의를 마치고 가결시킨 법률안은 본회의에 올라가기 전에 법사위에서 한번 더 심사를 받는다. 법률안 내용이 다른 법과 충돌하거나 기술적인 문제점이 있을 때, 이를 다듬어서 본회의로 올리는 것이 법사위의 역할 중 하나이다. 문제는 이 권한을 남용하는 경우이다. 법사위가 법률안 심사를 고의로 지연시키거나 법률안 내용을 완전히 바꿔버리는 경우가 심심치 않게 발생한다. 예를 들어, 여성가족위원회나 행정안전위원회가 동성 결혼을 제도화하는 법률안을 통과시키더라도, 법사위에서 이것이 "한국 법률체계에서는 이런저런 이유로 맞지 않는다, 위헌 소지가 있다"고 자의적으로 판단하여 해당 내용을 삭제한 채 본회의에 올린다면, 이를 막을 방법이 없다.
 
@@ -62,8 +64,13 @@
 
 
 ## 사법부 및 법률 집행 관련
-### 법제사법위원회(법사위)
-법제사법위원회는 행정부의 법무부, 검찰청, 법제처 및 그 산하기관, 그리고 사법부인 법원과 관련된 사안을 다루는 위원회다. 
+** 법을 이상하게 만드는 입법부나 이상하게 집행하는 행정부가 견제받듯, 법을 이상하게 해석해서 이익을 취하려는 사법부와 사법행정기관은 국회의 견제를 받아야 한다. **
+
+### 법제사법위원회(법사위) #2
+법제사법위원회는 행정부의 법무부, 감사원, 검찰청, 법제처 및 그 산하기관, 그리고 사법부인 법원 및 헌법재판소와 관련된 사안을 다루는 위원회다. 여기에 대통령이나 법관 등 공직자의 탄핵소추가 국회에서 의결되었을 때, 법사위는 국회를 대표하여 헌법재판소에서의 탄핵심판을 책임진다. 
+
+한국에서 법률과 관련된 
+
 ### 사법개혁특별위원회(사개특위)
 2016-2020 국회에 설치된 사법개혁특별위원회는 매우 막중한 과제를 안은 채 출범했다. 사개특위의 큰 목표는 2가지였다. 첫째, 양승태 대법원장(2011~ 17) 시절의 대법원이 법관인사권을 이용해 개별 판사의 재판에 압력을 가하거나, 박근혜 행정부로부터 대법원에 유리한 제도를 얻어내기 위해 일종의 재판거래를 한 사건이 재발하지 않도록 예방책을 만드는 것. 둘째, 검찰과 경찰의 수사권/기소권을 조정하고 검찰로부터 독립된 고위공직자 수사 전담 행정부서('고위공직자수사처', 약칭 '공수처')를 설치하여 검찰 견제구조를 만드는 것. 
 
@@ -77,7 +84,7 @@
 ## 행정부 운영, 예산 및 경제 관련
 **행정부 공무원이 일을 하려면 세 가지가 반드시 필요하다. 조직, 인력, 예산. 이 모든 것은 국회가 질의와 감사와 토론과 입법을 거쳐 편성하므로, 관련 위원회에 속한 의원 1명의 역할이 매우 중요하다.**
 
-### 정무위원회(정무위)
+### 정무위원회(정무위) #1
 정무위원회는 국무총리가 장관을 거치지 않고 직접 관할하는 중앙정부 부처 대부분과 관련된 사항을 논의한다. 한국의 국무총리는 보통 대통령이나 각부 장관에 밀려서 많은 실권을 가지지 못한다. 따라서 정무위가 다루는 주요 이슈는, 큰 사건이 언제나 터져나오는 정계에서 중요한 논쟁거리가 되기는 어렵다. 그러나 대형 재난이나 국가적 이벤트, 사회 전반에 영향을 끼치는 사건 등등 여러 부처가 범정부적으로 대응해야 하는 이슈가 생길 때, 국무총리가 모든 부처를 모아서 전체적인 대응을 주도한다. 따라서 정무위는 행정부가 빠르게 많은 자원을 투입해야 하는 긴급한 사안들을 다루는 일이 많다.
 
 국무총리 관할 부처 중에서 국무조정실(속칭 "총리실")과 금융위원회가 그런 역할과 관계가 깊다. 국무조정실은 행정부 각 부의 업무분장을 직접 조절하고 부처별 정책을 행정부 차원의 단일안으로 조정하는 역할을 하며, 학술적으로 정부정책을 연구하고 각 부처에 제안하는 24개의 정부출연연구기관을 관할한다. 금융위원회는 국내 금융정책을 총괄하고 자본금융시장을 관리감독하는데, 은행·증권·보험 등을 모두 포괄하므로 국민생활과 거시경제구조, 자금흐름을 기반으로 한 기업 및 산업구조 등등에 모두 커다란 영향을 끼칠 수 있다. 이처럼 눈에 잘 띄지 않지만 중장기적으로는 파급력이 큰 정부부처들이 국무총리 산하에 모여있다. 따라서 국회 정무위는 이들 기관으로부터 현안을 보고받고 국정감사를 통해 개선점을 지적함으로서, 비상상황에서 행정부의 대처능력, 그리고 행정부가 (정권을 초월해서) 제시하는 중장기적인 정책방침을 좌우하는 데에는 매우 중요한 역할을 맡고 있다.
@@ -87,7 +94,7 @@
 
 기재부의 영향력이 워낙 큰 만큼, 기재위에서 기재부의 정책 태도를 토론하는 것은 매우 중요한 일이다. 어떤 세목을 추가(종합부동산세, 탄소세, 부유세, 구글세 등)하거나 세율을 조정하는 일, 중앙정부 재정지출 규모를 확대하거나 축소하는 일, 특정 계층이나 산업에 조세혜택을 줘서 장려하는 일, 행정부 각 부처에 예산을 배정하는 일 등이 여기에 포함된다. 이상의 내용은 대통령 임기 5년의 성패를 좌우하는 경제정책으로 언론의 주목을 받으므로, 기재위 소속 의원들은 기재위의 각종 정책과 업무를 비판하거나 이를 방어하는 토론을 함으로서 이름을 알리기 쉽다. 
 
-### 행정안전위원회(행안위)
+### 행정안전위원회(행안위) #1
 당신이 공무원에게 혐오감정 - "머리는 굳었고 일은 제대로 안 하는데 해고위험도 없는 철밥통이다"는 등 - 을 가지고 있다면, 욕설을 하지 말고 국회 행정안전위원회를 주목하자. 당신이 가진 혐오감정을 풀어내고 제대로 감사하고 개선하는 역할을 하는 것이 행안위이다. 
 
 행안위가 담당하는 첫 번째 기관은 행정안전부와 인사혁신처다. 소관업무에는 행정부 조직구성, 공무원 임용·인사·윤리·처우 시스템, 행정업무 처리과정, 지방자치제도, 선거관리 지원 등이 포함된다. 즉 행정부와 공무원이 일하는 구조와 방식을 모두 여기서 결정한다. 여기에 추가로 "다른 중앙행정기관의 소관에 속하지 아니하는 사무"까지 행정안전부의 소관이므로, 행안위가 다루는 소관사무의 범위는 매우 넓다. 여기에는 전자정부시스템이나 개인정보보호 등 행정부에서 불편하기로 욕을 가장 많이 먹는 분야, 행정부의 업무를 파악할 자료가 보관되는 국가기록원 관리 등이 포함된다.
