--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -1,25 +1,39 @@
 # 위원회와 주요 이슈(2)
 
 
-## 복리후생, 개인의 권리 관련
-### 국회운영위원회-1
-국회운영위가 
-### 정무위원회-1
-정무위원회 역시 . 국가인권위원회가 개인이 마땅히 누려야 할 권리와 관련한다면, 국민권익위원회는 개인의 이해관계에서 부당하거나 불공평하게 피해를 보는 사례를 
-### 보건복지위원회(복지위)
-보건복지위원회는 보건복지부와 식품의약품안전처, 즉 중앙정부가 집행하는 보건위생 및 복지정책을 모두 다룬다. 여기에는 건강보험과 국민연금을 비롯한 공적연금, 병원-보건소로 구성된 의료체계와 의사/간호사/약사의 처우, 영유아 보육과 어린이집 관리, 노인과 장애인의 복지 및 생활지원정책 등이 
-### 환경노동위원회(환노위)
-모든 시민이 곧 일하는 노동자이기 때문에, 노동 문제는 곧 모든 시민의 권리와 복리후생을 
-### 여성가족위원회(여가위)
+## 개인의 권리, 복리후생 관련
+** 국회가 '민의의 전당'인 이유가 무엇일까? 이 공간에 살고 있는 모든 개인의 권리가 보장되고 이익이 증진되도록, 모든 개인의 의견을 모아 논의하는 자리이기 때문이다. **
+
+### 국회운영위원회(운영위) #2, 정무위원회(정무위) #2
+운영위와 정무위가 담당하는 중앙정부기관 중에, 개인의 권리와 직접 연관된 중요한 기관 2곳이 있다. 국가인권위원회(운영위 소관)는 정부, 기업 등의 집단이 개인이 마땅히 누려야 할 권리를 보장하지 않거나 침해할 경우, 이를 조사하고 시정할 것을 권고하는 기관이다. 국민권익위원회(정무위 소관)는 개인의 이해관계에서 부당하거나 불공평하게 피해를 보는 사례를 
+### 보건복지위원회(복지위) #1
+보건복지위원회는 보건복지부와 식품의약품안전처, 즉 중앙정부가 집행하는 보건위생 및 복지정책을 모두 다룬다. 여기에는 건강보험과 국민연금을 비롯한 공적연금, 병원-보건소로 구성된 공공/사립의료체계와 의사·간호사·약사의 처우, 영유아 보육과 어린이집 관리, 노인과 장애인의 복지 및 생활지원정책 등이 모두 포함되어, 사회경제적 취약계층의 의료와 생활에 직접 연관된 사항 전반을 다룬다.  
+### 환경노동위원회(환노위) #1
+모든 시민이 곧 일하는 노동자이기 때문에, 노동 문제는 곧 모든 시민의 권리와 복리후생을 결정하게 된다. 
+### 여성가족위원회(여가위) #1
 
 ## 외교안보, 안전, 방재 관련
+** 
+
 ### 외교통일위원회(외통위)
+외교통일위원회는 외교부와 통일부 소관 업무를 담당한다. 
+행정부의 외교통일정책 결정과정에서 의회의 영향력이 별로 없는 한국의 특성상
+
 ### 국방위원회(국방위)
+국방위원회는 국방부 및 국방과 관련된 업무를 소관한다. 
+
 ### 정보위원회(정보위)
-### sub: 행정안전위원회(행안위)
-행정안전위원회의 소관사항에는 시민에게 가장 가까이 있는 중앙관청들도 포함된다. 바로 경찰청과 소방청이다.  
-### sub: 환경노동위원회(환노위)
-### sub: 여성가족위원회(여가위)
+정보위원회는 국가정보원(국정원) 담당업무를 소관한다. 쓸 것이 없어서 더 이상의 자세한 설명은 생략한다.
+…
+정말이다. 정보위는 베일에 쌓인 위원회다. <국회법>에 의해 정보위의 소속 의원은 12명으로 제한되고, (인사청문회와 공청회를 제외한) 모든 회의는 비공개로 하도록 규정되었다. 정보위 회의의 대부분은 국가정보원장이 출석하여 정보위 위원들에게 국정원이 조사한 각종 정보를 보고하는 내용으로 채워질 것으로 '추정'되며, 위원장과 각 정당 간사들은 보고받은 내용을 추려서 회의 직후 기자들에게 공개할 따름이다. 따라서 국정원의 구조와 업무를 규정하는 법률을 바꾸거나, 국정원을 감독하고 예산을 심사하는 등의 일은 거의 공개되지 않는다. 어떤 일을 하는지 분명하지 않(으며, 어쩌면 실제 업무가 거의 없을 지도 모르)은 정보위이다보니, 정보위는 소속 위원이 다른 상임위원회 위원도 겸직할 수 있는 '겸임 상임위원회'로 규정되어 있다.
+
+### 행정안전위원회(행안위) #2
+행정안전위원회의 소관사항에는 시민에게 가장 가까이 있는 중앙관청들도 포함된다. 경찰청과 소방청이다.  
+
+### 보건복지위원회(복지위) #2
+### 환경노동위원회(환노위) #2
+### 여성가족위원회(여가위) #2
+한국 시민의 많은 생활이 여전히 가족단위에 
 
 #### 서울 강동구 갑: 진선미
 
@@ -27,13 +41,13 @@
 
 ## 교육, 문화, 학문 관련
 ### 교육위원회(교육위)
-### 과학기술정보방송통신위원회(과기정통위)
+### 과학기술정보방송통신위원회(과기정통위) #1
 ### 문화체육관광위원회(문체위)
 
 ## 산업, 통상, 환경, 에너지, 사회간접자본 관련
-### 과학기술정보방송통신위원회-1
+### 과학기술정보방송통신위원회(과기정통위) #2
 ### 농림축산식품해양수산위원회(농축수위)
 사람들이 자주 잊곤 하지만, 농림, 축산, 수산업 역시 매우 거대하고 중요한 '산업'이다. 
 ### 산업통상자원중소벤처기업위원회(산통자위)
-### 환경노동위원회-2
+### 환경노동위원회(환노위) #3
 ### 국토교통위원회(국토위)
