--- a/05_중부지방 권역.md
+++ b/05_중부지방 권역.md
@@ -22,7 +22,7 @@
 #### 서울 동북4구 + 광진, 중랑
 이 구역에서 가장 유명한 주민은 1980년대를 풍미한 <아기공룡 둘리>의 집(도봉구 쌍문동)주인, 고길동이다. 그 배경을 떠올려보면, 잘 구획된 골목길을 사이에 두고 작은 마당을 갖춘 단독주택들이 오밀조밀 모여있었다. 과거 좁디좁은 경성부 안에 꾸역꾸역 주택을 밀어넣었던 것과 달리, 1950~ 60년대에 서울로 편입된 동북4구와 광진, 중랑에는 (마치 2020년대의 하남과 남양주처럼) 60년대부터 80년대까지 당시 기준으로 새로이 정돈된 주거단지가 들어섰다. 이 주거단지는 80년대 중산층의 주요 거주지가 되어, 안정적인 경제기반을 갖추고 민주화의 열망을 강렬하게 표출하는 민주당계 정당의 표밭이 되었다. 
 
-그래서 동북4구와 광진, 중랑 권역의 주요 의원들을 나열하면, 80년대 이후 민주당계 정당의 40년 역사를 두루 살펴볼 수 있다. 80년대 정당 안팎에서 민주화운동의 핵심인사로 활동한 `이상수(중랑구 갑: 1988~ 92, 96~ 2004)`, `김근태(도봉구 갑: 1996~ 2008)`, `임채정(노원구 을/병: 1992~ 2008)`, `유인태(도봉구 을: 1992~ 96, 2004~ 08, 12~ 16)`. 같은 시기에 학생운동을 주도한 `신계륜(성북구 을: 1992~ 96, 2000~ 08, 12~ 16)`, `오영식(강북구 갑: 2004~ 08, 12~ 16)`, `우원식(노원구 을: 2004~ 08, 12~ )`. 대통령 선거를 준비하던 김대중이 차기 인재로 낙점하여 정계 바깥에서 특별히 영입한 `추미애(광진구 을: 1996~ 2004, 08~ 20)`와 `김한길(광진구 갑: 2012~ 16)`. 지역사회 및 시민사회 활동을 바탕으로 정계에 진출한 `인재근(도봉구 갑: 2012~ )`과 `유승희(성북구 갑: 2012~ )`. 사민주의 정당의 초기 핵심 정치인으로 활동하다가 2012년 야권통합 기류를 따라 입당한 `박용진(강북구 을: 2016~ )`. 
+그래서 동북4구와 광진, 중랑 권역의 주요 의원들을 나열하면, 80년대 이후 민주당계 정당의 40년 역사를 두루 살펴볼 수 있다. 80년대 정당 안팎에서 민주화운동의 핵심인사로 활동한 `이상수(중랑구 갑: 1988~ 92, 96~ 2004)`, `김근태(도봉구 갑: 1996~ 2008)`, `임채정(노원구 을/병: 1992~ 2008)`, `유인태(도봉구 을: 1992~ 96, 2004~ 08, 12~ 16)`. 같은 시기에 학생운동을 주도한 `신계륜(성북구 을: 1992~ 96, 2000~ 08, 12~ 16)`, `오영식(강북구 갑: 2004~ 08, 12~ 16)`, `우원식(노원구 을: 2004~ 08, 12~ )`. 대통령 선거를 준비하던 김대중이 차기 인재로 낙점하여 정계 바깥에서 특별히 영입한 `추미애(광진구 을: 1996~ 2004, 08~ 20)`와 `김한길(광진구 갑: 2012~ 16)`. 지역사회 및 시민사회 활동을 바탕으로 정계에 진출한 `인재근(도봉구 갑: 2012~ )`과 `유승희(성북구 갑: 2012~ 20)`. 사민주의 정당의 초기 핵심 정치인으로 활동하다가 2012년 야권통합 기류를 따라 입당한 `박용진(강북구 을: 2016~ )`. 
 
 위의 인물 나열에서, 유독 숫자 2008과 2012가 많이 보일 것이다. 2008년 총선에서 기존 민주당계 정당 출신 중진들이 모조리 낙선하는 큰 지각변동이 있었다. 이 때 보수주류 정당(한나라당)은 서울의 단독주택지구를 아파트 단지로 재개발한다는 '뉴타운' 공약을 내걸었고, 뉴타운 주요 사업구역이 속한 동북4구가 그 영향을 받은 것이다. 사민주의 정당(민주노동당, 진보신당)을 비롯한 진보정당들이 뉴타운 공약을 맹렬하게 비판하는 가운데 민주당계 정당(통합민주당)이 제대로 대응하지 못했고, 결국 대부분의 지역구에서 한나라당 48% : 민주당 44% : 진보정당 5% 정도의 득표율을 기록하며 한나라당이 압승(전체 13석 중 11석)을 거두었다. 이 11명의 한나라당 의원은 모두 초선의원이었고, 4년 뒤인 2012년 총선에서 모두 낙선했으며, 16년 총선에서 단 2명(정양석: 강북구 갑, 김선동: 도봉구 을)만 다시 돌아왔다.
 
@@ -92,46 +92,61 @@
 
 
 ### 인천-경기권
+** 인천-경기권이 총선의 승부처인 이유는 단순히 의석수가 많기 때문이 아니다. 다양한 생활양식과 지역속성이 섞여있는, 한국 전체의 축소판과 같기 때문이다. **
+
 인천광역시와 경기도는 전국 인구의 31.3%, 전국 지역구의 28.9%(73석)를 차지하는 전국에서 가장 큰 권역이다. 게다가 이 곳을 모두 "서울에 인접했다" 정도로 퉁쳐서 말할 수도 없는 노릇이다. 각 도시가 자체적으로 대형 제조업 공업단지나 첨단지식산업단지를 갖추어서 그 자체로 생활권을 이루는 대도시도 많고, 서울을 비롯한 근교 대도시의 베드타운 역할을 하는 도시도 많으며, 농축산업이나 관광, 전방 군부대 등이 지역경제에서 차지하는 비중이 훨씬 큰 지역도 많다. 
-인천/경기권은 그만큼 지역마다 서로 다른 성향와 스토리를 갖췄기 때문에, 같은 수도권이라는 이유만으로 묶어서 설명하기에 가장 '위험'한 곳이기도 하다. 그렇기에 인천-경기권 전체를 다루는 부분에서는, 경기도 전체의 폭발적인 인구증가와 선거구도의 변화의 관계에 대해서만 말해보자.
-<!--1선거구 1인 선출 제도가 부활한 1988년  인천-경기권에서 민주당계 정당의 당선인 숫자가 과반을 처음 넘긴 것은 -->
-1980/90년대 인천-경기권의 도시 인구가 폭발적으로 증가했다. 
-1992년 총선에서의 선거구별 인구수를 `1992년 주민등록인구현황(행정안전부 제공)`을 통해 살펴보면, 그 문제가 심각하게 드러난다. 공업단지를 바탕으로 빠르게 성장한 당시 인구 35.4만 명의 안산시는 단독으로 선거구를 만들지 못하고 옹진군(1.9만 명)과 함께 선거구를 이루었다. 하지만 9.5만 명의 여주군은 단독으로 선거구 1개를 구성했다. 그 이유는 간단한데, 1선거구에서 최다득표자 1인을 선출 제도(소선거구제)가 부활한 1988년 당시에는 인구 차이가 이정도로 심하지 않았기 때문이다. 당시 선거구 획정을 위한 인구수 자료가 되었던 `1987년 주민등록인구현황(1987 한국통계연감, 통계청 제공)`을 보면, 당시 안산시(경기도 반월출장소)의 인구는 9.7만 명이었기 때문에 옹진군과 함께 선거구를 구성하는 게 마땅했으나, 도시 인구가 4년 사이 3.6배 커지는 동안에도 한 번 정해진 선거구가 새로 짜여지는 데에는 많은 시간이 걸렸다. 인구가  
+
+인천/경기권은 그만큼 지역마다 서로 다른 성향와 스토리를 갖췄기 때문에, 같은 수도권이라는 이유만으로 묶어서 설명하기에 가장 '위험'한 곳이기도 하다. 그렇기에 인천-경기권 전체를 다루는 부분에서는, 경기도 전체의 폭발적인 인구증가와 선거구도 변화의 관계에 대해서만 말해보자.
+
+노태우 행정부(1988~ 93)는 전국에 주택 약 200만 호를 짓는 대규모 주택개발 사업을 진행했고, 그 중 상당수는 연수(인천), 분당(성남), 일산(고양), 중동(부천), 평촌(안양), 산본(군포) 등 인천-경기권의 대단지 아파트 신도시의 형태로 실행되었다. 이 때부터 1100만에 육박하던 서울의 인구가 감소하기 시작하고, 인천-경기권 인구가 급증한다. 그러나 지역구 중심의 한국 국회의원 총선거는 이 인구변화를 빠르게 적용하지 못했다. 인구가 급증한 도시권의 지역구 숫자가 빠르게 늘어나지 않음에 따라, 인천-경기권 안에서는 도시 선거구와 농촌 선거구의 인구격차가 지나치게 벌어져서 심각한 민의 왜곡이 일어났다. 
+
+1992년 총선에서의 선거구별 인구수를 `1992년 주민등록인구현황(행정안전부 제공)`을 통해 살펴보면, 그 문제가 심각하게 드러난다. 공업단지를 바탕으로 빠르게 성장한 당시 인구 35.4만 명의 안산시는 옹진군(1.9만 명)까지 합쳐서 선거구 1개를 이루었다. 하지만 9.5만 명의 여주군은 단독으로 선거구 1개를 구성해서, 선거구별 인구격차가 3.9:1에 달했다. 그 이유는 간단한데, 1선거구에서 최다득표자 1인을 선출 제도(소선거구제)가 부활한 1988년 당시에는 인구 차이가 이정도로 심하지 않았기 때문이다. 당시 선거구 획정을 위한 인구수 자료가 되었던 `1987년 주민등록인구현황(1987 한국통계연감, 통계청 제공)`을 보면, 안산시(경기도 반월출장소)의 인구는 9.7만 명이었기 때문에 옹진군과 함께 선거구를 구성하는 게 마땅했으나, 도시 인구가 4년 사이(1988~ 92) 3.6배 커지는 동안에도 한 번 정해진 선거구가 새로 짜여지는 데에는 많은 시간이 걸렸다. 안산이 3개 이상의 선거구를 가지게 되는 것은 2004년 총선이 되어서야 이루어진다. 이와 같이 인천-경기권 도시 인구의 급격한 증가로 인해, 도시에서 인기있는 정당은 의석수의 실질적 손해를 입었다.
+
+공교롭게도 1988년 이후 경기권의 의석수가 급증할 때마다, 보수주류 정당은 경기도의 주도권을 잃었다. 경기도 지역구가 5곳 이상 늘어났던 3번의 총선(1996, 2004, 2016)에서, 보수주류 정당은 1954년 이래 사상 처음으로 경기도 의석을 절반 이상 얻지 못한다던가(1996), 민주당계 정당 당선자수가 10명 이상 증가하도록 허용하였다(2004, 2016). 특히 2004/2016년에 신설된 각각 8곳의 신규 선거구에서, 민주당계 정당은 각각 7석/8석을 차지하여 압도적인 우세를 보였다.
+
 
 #### 인천광역시
 인천의 독특한 인구구성은 인천의 정치구도를 아주 복잡하게 만들었다. 인천에는 (1)해방과 한국전쟁 기간에 배를 타고 남한으로 이주한 이북5도 주민, (2)고도경제성장기에 인천의 공장에서 일하기 위해 배를 타고 이주한 충청권 주민, (3)서울에서 살다가 자신의 터전이 재개발되며 어쩔 수 없이 이주한 수도권 도시노동자가 일정하게 섞여있다. 반공보수의 가치, 충청권 지역주의의 영향력, 노동운동의 근거지라는 속성을 두루 갖춘 셈이다. 그런 탓에 인천에서 각 정당은 매우 역동적으로 움직인다. 인천의 총선 역사는, 굳건해보이는 보수주류 정당을 상대로 승리하기 위해 나머지 정당들이 합종연횡한 역사이기도 하다. 
 인천에서 보수주류 정당이 처음으로 과반의석을 놓친 것은 2000년이다. 1997년 대선에서 민주당계 정당과 충청권 보수정당이 후보를 단일화했고, 대통령(김대중: 새정치국민회의)과 국무총리(김종필: 자유민주연합)을 배출하며 두 당의 공동정부가 구성된다. 이는 총선에서 충청권 보수정당을 지지하던 유권자가 민주당계 정당으로 이동하는 효과를 낳았는데, 소선거구제에서 '상대편'에 해당하는 보수주류 정당을 이기기 위함이라고 보인다. 
 2008년에 다시 보수주류 정당이 10석(한나라당 탈당 후 복당한 1석 포함)을 차지하자, 2012년부터는 민주당계 정당과 사민주의 정당이 모든 지역구에서 후보단일화를 했다. 2012년의 후보단일화는 전국적으로 이뤄졌지만, 다른 지역과 달리 인천에서는 단일화 과정에서 두 당(민주통합당, 통합진보당) 사이의 잡음이 별로 없었다. 게다가 2016년에는 두 당(더불어민주당, 정의당)이 단일화를 거부한 상황에서 인천시당 차원에서 단일화를 진행했으며, 민주당계 중도정당(국민의당)도 중앙당과 다르게 마지막까지 단일화 가능성을 타진했다. 이것이 가능했던 것은, 인천에서 두 당 후보들의 관계가 특별히 좋기 때문으로 보인다. 인천의 민주당계 정당 주요 후보들 - 송영길, 문병호, 홍영표 등 - 도 사민주의 정당 후보들과 함께 80~ 2000년대 인천의 노동운동을 조직적으로 이끈 '활동가 동지'의 경험이 있다. 사민주의 정당 역시 단일화를 통해 2010년에 역사상 첫 구청장(조택상: 동구, 배진교: 남동구)을 배출한 중요한 경험을 가졌다.
 
-이렇게 정치구도가 복잡하다보니 인천 유권자의 투표성향을 엄밀하게 말하기란 매우 어렵다. 굳이 따지자면, "서울과 가까우면 민주당계, 멀면 보수주류" 이라는 모호한 일관성 정도만 확인할 수 있다. 보수주류 정당의 중진인 안상수(중구-동구-강화군-옹진군: 2016~ ), 홍일표(남구 갑: 2008~ ), 윤상현(남구 을: 2008~ ), 황우여(연수구: 2000~ 16), 이학재(서구 갑: 2008~ )는 서울과 멀리 떨어진 원도심, 도서지역(강화, 옹진), 송도/청라신도시 지역에서 당선되었다. 반면 민주당계 정당 중진인 홍영표(부평구 을: 2009~ ), 문병호(부평구 갑: 2004~ 08, 12~ 16), 송영길(계양구 을: 2000~ 10, 16~ )은 부평, 계양 등 서울과 가까운 지역에서 당선되었다. 이런 지리적 차이는 생각보다 큰 영향을 끼치고 있다. 연수구에서만 4선을 한 황우여가 2016년에 서구 을로 지역구를 옮기자 38%의 저조한 득표율로 바로 낙선했다는 것이 이를 뒷받침한다.
+이렇게 정치구도가 복잡하다보니 인천 유권자의 투표성향을 엄밀하게 말하기란 매우 어렵다. 굳이 따지자면, "서울과 가까우면 민주당계, 멀면 보수주류" 이라는 모호한 일관성 정도만 확인할 수 있다. 보수주류 정당의 중진인 `안상수(중구-동구-강화군-옹진군: 2016~ )`, `홍일표(남구 갑: 2008~ )`, `윤상현(남구 을: 2008~ )`, `황우여(연수구: 2000~ 16)`, `이학재(서구 갑: 2008~ )`는 서울과 멀리 떨어진 원도심, 도서지역(강화, 옹진), 송도/청라신도시 지역에서 당선되었다. 반면 민주당계 정당 중진인 `홍영표(부평구 을: 2009~ )`, `문병호(부평구 갑: 2004~ 08, 12~ 16)`, `송영길(계양구 을: 2000~ 10, 16~ )`은 부평, 계양 등 서울과 가까운 지역에서 당선되었다. 이런 지리적 차이는 생각보다 큰 영향을 끼치고 있다. 연수구에서만 4선을 한 황우여가 2016년에 서구 을로 지역구를 옮기자 38%의 저조한 득표율로 바로 낙선했다는 것이 이를 뒷받침한다.
 
 
 #### 수원, 성남, 고양
-완전히 따로 떨어진 세 도시를 콕 집어서 설명하면서 경기도의 다양성을 살펴보자. 2000년대 이후 경기도내 최대 도시의 지위를 놓치지 않은 수원, 성남, 고양이다. 세 도시 모두 2020년 기준 인구가 100만 명 내외이고, IT/전자산업 중심의 산업단지를 가지고 있어서 왠만한 광역시급 경제규모를 갖추었다는 공통점을 가진다. 그러나 세 도시의 형성과정은 완전히 다르다. 조선 정조 대에 '신도시'로 조성된 수원, 중앙정부가 서울의 철거민을 수용하기 위해 1960년대에 개발한 원도심과 90년대의 부촌 신도시가 공존하는 성남, 자연발생한 읍내가 따로따로 발전하다가 90년 1기 신도시가 개발되며 도시급으로 성장한 고양. 
-세 도시 모두 상대적으로 개발이 덜 된 주거지역, 그리고 중앙정부 주도 신도시로 개발된 주거/산업단지가 혼재되어 있다. 그래서 세 도시의 표심은 선거마다의 이슈와 인구구조상 특징(연령, 재산, 직업군 등)에 따라 역동적으로 변화한다. 지역구에 다선 중진의원이 있더라도 그 구도가 금방 바뀔 수 있는 이유가 여기에 있다. 
+완전히 따로 떨어진 세 도시를 콕 집어서 설명하면서 경기도의 다양성을 살펴보자. 2000년대 이후 경기도내 최대 도시의 지위를 놓치지 않은 수원, 성남, 고양이다. 세 도시 모두 2020년 기준 인구가 100만 명 내외이고, IT/전자산업 중심의 산업단지를 가지고 있어서 왠만한 광역시급 경제규모를 갖추었다는 공통점을 가진다. 그러나 세 도시의 형성과정은 완전히 다르고, 그에 따른 표심도 다르다. 
 
-다만 2010년대부터 세 도시 모두 과거에 비해 진보적 성향을 보이는 공통점을 보이기 시작했다. 이는 . 민주당게 정당과 사민주의 정당이 '수도권과 대도시의 정당'이 되어가면서 
+수원은 조선 정조 대에 '신도시'로 조성된 전통있는 도시로, 1988년 총선부터 4번 연속으로 보수주류 또는 보수적인 충청권 제3정당에서만 당선자를 배출했다. 그 중심에는 부자가 함께 7선을 기록한 `남평우(수원시 팔달구: 1992~ 98)`와 `남경필(수원시 팔달구: 2000~ 14)`이 있었다. 2004년부터 민주당계 당선인이 대거 탄생하지만, 그 중심에는 당내에서 우파적 경제사회 정책을 추진한 것으로 유명한 `김진표(수원시 영통구: 2004~ 14, 16~ )`가 자리잡고 있다. 
+
+성남은 중앙정부가 서울의 철거민을 수용하기 위해 1960년대에 개발한 원도심과 90년대의 부촌 신도시가 공존하는데, 신도시 건설 완료 후인 1992년 총선부터 4번 연속으로 원도심(수정구/중원구)과 신도시(분당구)를 각각 민주당계와 보수주류 정당이 독차지했다. `고흥길(성남시 분당구 갑: 2000~ 12)`과 `임태희(성남시 분당구 을: 2000~ 11)`는 분당에서 3선을 기록한 중량감을 바탕으로 이명박 행정부에서 장관직을 맡았는데, 그 반대편의 원도심에서는 민주당계 3선 중진(`김태넌(성남시 수정구: 2004~ 08, 12~ )`)과 사민주의 정당 지역구의원(`김미희(성남시 중원구: 2012~ 15)`)이 등장하기도 했다. 
+
+고양은 자연발생한 읍내가 따로따로 발전하다가 90년 1기 신도시가 개발되며 도시급으로 늦게 성장했다. 고양군 시절에는 보수주류 정당의 안정적 지지세가 유지되었으나 2000년 총선부터 서울에 출퇴근하는 중산층 유권자를 중심으로 민주당계 및 사민주의 정당에 대한 지지세로 완전히 돌아선다. 대선주자급 정치인인 `심상정(고양시 덕양구 갑: 2012~ )`, `유시민(고양시 덕양구 갑: 2003~ 08)`, `(고양시 일산구 갑: 2004~ 08)`, `최성(고양시 덕양구 을: 2004~ 08)`이 자리잡았고, '중산층 신도시 중진'의 무게감을 바탕으로 문재인 행정부의 장관직을 맡은 `유은혜(고양시 일산동구: 2012~ 20)`, `김현미(고양시 일산서구: 2012~ 20)`가 자리잡았다.
+
+다만 2010년대부터 세 도시 모두 과거에 비해 민주당계 및 사민주의 정당에 더 우호적으로 변한다는 공통점이 있다. 성남 분당에서 손학규(성남시 분당구 을: 2011~ 12)가 승리한 2011년 보궐선거, 민주당계 정당(더불어민주당)이 성남 분당(갑/을)과 수원 팔달구(수원시 병)가 모두 승리한 2016년 총선 등, 보수주류 정당의 다선 의원이 나온 지역구에서 민주당계 정당이 연이어 승리하고 있다. 이것은 민주당계 정당이 시간이 지나면서 "수도권, 대도시의 지지를 받는 보수정당"으로 자리잡는 과정일 수도 있다. 
 
 #### 서울 서남부 인접 위성도시
-지금 이 파트에서 설명하는 "서울 서남부 인접 위성도시"는 인천과 서울의 공업지대 사이에 위치하며 배드타운으로 성장한 부천, 안양, 광명, 군포, 시흥 등을 묶은 표현이다. 30~ 80만 인구를 차지하는 각 도시를 합치면, 대구광역시의 절반 정도 되는 면적 안에 대구를 살짝 뛰어넘는 숫자의 인구(약 250만 명)를 가진 인구 초밀집 권역이다. 이 권역은 1990년대의 수도권 1기 신도시 사업으로 대단지 아파트가 들어서면서 인구가 폭발적으로 늘어났다. 하지만 이 권역의 정치사를 알기 위해서는, 이 지역에서 신도시보다 더 일찍 조성되었던 1960~ 70년대 주거지의 역사를 알아야 한다.
+지금 이 파트에서 설명하는 "서울 서남부 인접 위성도시"는 인천과 서울의 공업지대 사이에 위치하며 배드타운으로 성장한 부천, 안양, 광명, 군포, 시흥 등을 묶은 표현이다. 30~ 80만 인구를 차지하는 각 도시를 합치면, 대구광역시의 절반 정도 되는 면적 안에 대구를 살짝 뛰어넘는 숫자의 인구(약 250만 명)를 가진 인구 초밀집 권역이 된다. 이 권역은 1990년대의 수도권 1기 신도시 사업으로 대단지 아파트가 들어서면서 인구가 폭발적으로 늘어났다. 하지만 이 권역의 정치사를 알기 위해서는, 이 지역에서 신도시보다 더 일찍 조성되었던 1960~ 70년대 주거지의 역사를 알아야 한다.
 
 서울 서남부 인접권역은 일제시대 때에 이미 경성과 인천으로 이어지는 도로망을 갖추어 읍내가 발전한 곳이다. 그러나 60년대 이후 공업도시로서 서울(특히 구로-영등포)과 인천(특히 부평)이 발전하면서 이 권역의 성격이 바뀐다. 공장의 일자리를 찾아 수도권으로 이주했지만 포화된 서울과 인천에 들어가지 못한 사람들, 또는 중앙정부 주도로 진행된 서울 도시정비사업으로 강제로 쫓겨난 사람들이 발생하기 시작했다. 서울 서남부 인접권역은 이들이 정착할 수 있는 몇 안되는 거주지역이었다. 당시 중앙정부는 없는 경제자원을 쥐어짜서 서울, 부산 등 폭발적으로 커지는 대도시의 생활인프라를 확충하는 것만으로도 벅찼고, 지방자치는 시행되지 않아서 도시가 자체적으로 시설확충을 꾀할 수도 없었다. 결국 중앙정부가 작정하고 신도시를 개발하기 전까지, 이 권역은 불균형한 경제발전의 문제점을 도시노동자가 생활 곳곳에서 온몸으로 떠안아야 하는 현장이 되었다.
 
-이 배경을 감안하면, 서울 서남부 인접권역은 노동운동, 빈민운동 등의 재야 시민운동 출신 정치인이 크게 활약했을 것임을 추측할 수 있다. 이를 가장 잘 대변하는, 1990년대부터 이 지역에서 중견 정치인으로 활동한 네 명의 의원을 꼽아보자. 1970년대 청계천/왕십리 판자촌의 빈민운동에 투신하여 정일우 신부와 함께 '철거민의 대부'로 불리운 제정구(시흥시-군포시: 1992~ 99). 아버지가 빈민구제운동 일환으로 설립한 집단농장 "풀무원농장"의 공판장을 직접 운영해 유기농 식품기업으로 성장시킨 원혜영(부천시 오정구: 1992~ 96, 2004~ 20). 60년대 학생운동을 주도하다가 기독교 교단의 후원을 받으며 구로공단의 노동운동에 참여한 손학규(광명시: 1993~ 98, 2000~ 02). 노동조합 조직을 위해 학생신분을 속이고 공장에 위장취업하는 운동을 선도했던 80년대 노동운동의 신화 김문수(부천시 소사구: 1996~ 2006). 중견 정치인이 된 이후 그들의 사상이 극적으로 변하는 일이 없지는 않다만, 정당계열을 막론하고 이 지역의 정치인들은 이들과 함께 시민운동에 참여하거나 이들의 의정활동을 보좌하면서 정치에 입문하는 등, 재야 시민운동의 영향 아래에서 성장하였다. 
+이 배경을 감안하면, 서울 서남부 인접권역은 노동운동, 빈민운동 등의 재야 시민운동 출신 정치인이 크게 활약했을 것임을 추측할 수 있다. 이를 가장 잘 대변하는, 1990년대부터 이 지역에서 중견 정치인으로 활동한 네 명의 의원을 꼽아보자. 1970년대 청계천/왕십리 판자촌의 빈민운동에 투신하여 정일우 신부와 함께 '철거민의 대부'로 불리운 `제정구(시흥시-군포시: 1992~ 99)`. 아버지가 빈민구제운동 일환으로 설립한 집단농장 "풀무원농장"의 공판장을 직접 운영해 유기농 식품기업으로 성장시킨 `원혜영(부천시 오정구: 1992~ 96, 2004~ 20)`. 60년대 학생운동을 주도하다가 기독교 교단의 후원을 받으며 구로공단의 노동운동에 참여한 `손학규(광명시: 1993~ 98, 2000~ 02)`. 노동조합 조직을 위해 학생신분을 속이고 공장에 위장취업하는 운동을 선도했던 80년대 노동운동의 신화 `김문수(부천시 소사구: 1996~ 2006)`. 중견 정치인이 된 이후 그들의 사상이 극적으로 변하는 일이 없지는 않다만, 정당계열을 막론하고 이 지역의 정치인들은 이들과 함께 시민운동에 참여하거나 이들의 의정활동을 보좌하면서 정치에 입문하는 등, 재야 시민운동의 영향 아래에서 성장하였다. 
 
 #### 경기 서남부
-서해를 끼면서 시흥-안산-화성-오산-평택으로 이어지는 5개 시의 공업단지에는 중소 제조기업부터 자동차/전자계열 대기업에 이르는 다양한 공장이 즐비하다. 하지만 그 모든 영역이 공장으로만 채워져있진 않아서, 밀집된 도시(거주지)와 공단과 농촌을 번갈아 볼 수 있다. 이처럼 같은 도시 안에서도 인구밀도와 경제구조와 사람들의 계층이 다르기 때문에, 이 지역의 정치성향은 읍면동별, 선거구별로 아주 다르다. 도시나 공업지대 중에서도 밀집도가 높은 읍/동으로만 구성된 곳에서는 조정식(시흥시 을: 2004~ ), 김영환(안산시 상록구 갑/을: 1996~ 2004, 2009~ 16), 천정배(안산시 단원구 갑: 1996~ 2012), 안민석(오산시: 2004~ ) 등 4선씩 하는 민주당계 정당 중진들이 꾸준히 배출되었다. 반면 조금이라도 농촌의 비율이 높은 곳은 보수주류 정당의 힘이 세서, 원유철(평택시 갑: 1996~ 2004, 08~ 20), 서청원(화성시 갑: 2013~ ) 같은 당내 우파에 해당하는 중진들이 자리잡곤 한다. 이 지역의 농촌은 공업지대의 존재와 무관하게 (곧 등장할) 경기도 외곽의 다른 농촌지역과 유사한 속성을 가졌다.
+서해를 끼면서 시흥-안산-화성-오산-평택으로 이어지는 5개 시의 공업단지에는 중소 제조기업부터 자동차/전자계열 대기업에 이르는 다양한 공장이 즐비하다. 하지만 그 모든 영역이 공장으로만 채워져있진 않아서, 밀집된 도시(거주지)와 공단과 농촌을 번갈아 볼 수 있다. 이처럼 같은 도시 안에서도 인구밀도와 경제구조와 사람들의 계층이 다르기 때문에, 이 지역의 정치성향은 읍면동별, 선거구별로 아주 다르다. 도시나 공업지대 중에서도 밀집도가 높은 읍/동으로만 구성된 곳에서는 `조정식(시흥시 을: 2004~ )`, `김영환(안산시 상록구 갑/을: 1996~ 2004, 2009~ 16)`, `천정배(안산시 단원구 갑: 1996~ 2012)`, `안민석(오산시: 2004~ )` 등 4선씩 하는 민주당계 정당 중진들이 꾸준히 배출되었다. 반면 조금이라도 농촌의 비율이 높은 곳은 보수주류 정당의 힘이 세서,` 원유철(평택시 갑: 1996~ 2004, 08~ 20)`, `서청원(화성시 갑: 2013~ )` 같은 당내 우파에 해당하는 중진들이 자리잡곤 한다. 이 지역의 농촌은 공업지대의 존재와 무관하게 (곧 등장할) 경기도 외곽의 다른 농촌지역과 유사한 속성을 가졌다.
 
 특이하게, 경기 서남부는 여타 수도권 지역에 비해 제3정당(보수계열 또는 민주당 계열)이 많이 지지받는다. 1996년의 자유민주연합(충청권 제3정당)과 통합민주당(민주당계 소수정당)은 각각 2석과 1석을 얻었고, 무소속으로 당선된 초선의원 원유철은 1997년 대선을 앞두고 이인제가 창당한 국민신당으로 이적한 바 있다. 2008년에는 경상권 바깥에서 유일한 친박연대(보수계열 소수정당) 당선인(홍장표: 안산시 상록구 을)을 배출했으며, 2016년 총선에는 안산의 두 현역의원(김영환, 부좌현)과 과거 중진의원(천정배: 광주광역시 서구 을 출마)이 국민의당(민주당계 소수정당)으로 이적해 출마하기도 했다. 당시 국민의당은 (비록 모두 낙선하긴 했지만) 경기 서남부의 12개 지역구 중 8곳에서 지역구 후보 득표율이 20%를 넘었다. 나머지 경기도 48개 지역구에서는 5곳에 불과했던 것과 비교된다. 2020년 현재의 현역의원 중에서도, 보수주류 정당을 나와서 보수개혁 정당에 몸담았거나(박순자, 안산시 단원구 을) 계속 몸담고 있는(유의동, 평택시 을) 경우가 있다. 
 
 #### 경기 북부, 동남부 외곽지역
-경기도 외곽의 농촌북한과 마주한 최전방. 
+수도권이긴 하지만 서울에서 멀리 떨어진 외곽. 북한과 마주한 최전방. 농촌의 보수적인 표심과 반공안보에 민감한 보수적인 표심이 더해져서, 경기도 외곽은 이승만 행정부 시절부터 보수주류 정당을 강력하게 지지하는 표심이 자리잡게 되었다. 공교롭게도 이 지역에서 보수주류 정당 출신으로 독재정권 몰락의 상징과 같은 전국구 정치인이 셋이나 당선된 적이 있다. 이승만 행정부가 1960년 3·15 부정선거를 감행한 원인을 제공한 당시 부통령 후보 이기붕(이천군: 1958~ 60), 이를 실무적으로 지시하고 집행한 내무장관 최인규(광주군: 1958~ 60), 박정희 행정부의 대통령경호실장으로 월권을 휘두르다가 박정희와 함께 김재규에게 사망한 차지철(광주군-이천군: 1967~ 74)까지. 이기붕의 경우 원래 자신의 고향이던 이천에서 출마를 준비하던, 친정권 정치깡패 보스인 이정재를 반강제로 쫓아내고 공천을 받아 단독후보로 당선된 인물이기도 했다.
+
+아무튼 민주화 이후 시대로 넘어와서, 이 지역에서 계속해서 보수주류 정당 중진이 탄생했지만 그 성격이 다들 다르며, 특이하다. `이한동(포천군-연천군: 1981~2004)`처럼 전두환 행정부 시절부터 보수주류 정당에 몸담았지만 충청권 보수계열 제3정당(자유민주연합)으로 이적하고 김대중 행정부의 국무총리를 맡은 경우가 있는가 하면, `정병국(여주군-양평군-가평군: 2000~ )`처럼 민주화 학생운동에 참여하다가 김영삼에 의해 발탁되어 보수주류 정당에 몸담은 경우가 있다. 또 `이규택(여주군: 1992~2008)`처럼 민주당계 정치인으로 출발하였다가 김대중을 반대하며 보수주류로 돌아서서 현재는 친박계 극우정당(친박신당)에서 활동하는 경우가 있다. 분명 보수주류 정당의 주요 중진이지만 당을 이끈다기 보다는 당내의 일반적인 흐름과 다르게 행동하는, 특이한 경우들이다.
+
 
 
 #### 그 외 서울 인접 위성도시
-경기도에서 '서울 인접 위성도시'를 한 권역으로 퉁쳐서 이야기하는 것 만큼 무례한 일이 없을 것이다. 의정부나 구리처럼 지방자치가 실시되기 이전에 읍단위로 독립하여 도시가 된 곳과, 
-
-이 지역들을 굳이 따로 설명하는 이유는, . 2000년대 이후 인구가 급증한 만큼, 이 지역의 의석수가 증가하고 있다. 2004년과 2016년 총선 사이에 전국의 지역구는 10개 증가(243->253)했는데, 같은 기간에 남양주, 용인(2석), 김포, 광주, 파주에서 총 6개의 지역구가 늘어났다. 이만큼 가파른 증가는 
+경기도에서 '그 외 서울 인접 위성도시'를 한 권역으로 퉁쳐서 이야기하는 것 만큼 무례한 일이 없을 것이다. 의정부나 구리처럼 지방자치가 실시되기 이전에 읍단위로 독립하여 도시가 된 곳과, 용인과 남양주처럼 2000년대부터 인구가 3~ 4배씩 증가한 중대규모 도시인 곳과, 김포나 파주처럼 2010년대부터 인구가 2배씩 증가한 중소규모 도시가 같은 속성을 가질 리는 없다. 그러나 이 지역들을 굳이 따로 묶어서 설명하는 이유는, 대규모 위성도시가 아닌 소규모 위성도시들이 정치적으로 점점 중요해지고 있는 상황을 설명하기 위해서이다. 
+서울, 인천, 수원, 성남, 고양 등 수도권 대도시가 포화 상태에 이르자, 2000년대부터 중앙정부 주도로 수도권 전철망을 서울 바깥으로도 계속 연결하고 신도시 개발사업을 지속적으로 추진했다. 이 과정에서 서울 인접 위성도시의 인구는 계속 증가했다. 비록 도시의 정치적 이름값이 수도권 대도시에 비해서는 떨어지지만, 정당정치에 있어서 실질적으로 중요한 의석수의 비중은 가파르게 증가하고 있다. 20년의 차이를 둔 1996년과 2016년 총선에서 전국의 지역구 숫자는 253개로 동일하다. 같은 기간 의정부, 남양주, 하남, 용인, 파주, 광주, 김포의 7개 도시에서 지역구가 총 10석 증가했다. 지역구 숫자로만 보면 강원도(2016년 8석)나 충청북도(8석)보다 더 크고, 전라남도(10석)나 전라북도(10석)와 맞먹는 크기의 '도' 하나가 새로 생긴 셈이다.
+지역구가 늘어난다는 것은, 신인 경쟁자와 현역 의원이 각자 상생(?)하여 다른 지역구로 출마할 수 있다는 의미이다. 2000년대 초만 해도 `안상수(의왕시-과천시: 1996~ 2012)` 정도를 제외하면 전국구급 중진을 찾기 어려운 무난무난한 지역이었으나, 이후 `최재성(남양주시 갑: 2004~ 16)`, `유정복(김포시: 2004~ 14)`, `한선교(용인시 수지구: 2004~ 20)` 등의 지역 중진이 쏟아져나왔다. 경남지사 출신인 `김두관(김포시 을: 2016~ 20)`이 신설 지역구에 당선된다던가, 민주당계 정당이 신인이던 `송호창(의왕시-과천시: 2012~ 16)`, `표창원(용인시 정: 2016~ 20)`, `조응천(남양주시 갑: 2016~ )`을 전략공천하는 등 정당들의 총선전략에 있어서 비중이 점점 높아지기도 한다. 
 
 
 
@@ -164,12 +179,16 @@
 
 
 ### 강원도
+** 지리적으로 접근하기 어려워서, 혹은 인구가 적어서, 중앙정계의 관심을 받기 어려웠던 강원도에서 지역조직의 도움 없이 총선을 치르기란 매우 어려운 일이다. **
+
 우리가 전통적으로 알고 있는 충청·전라·경북·경남권의 표심이 `1990년대 이후의 지역주의 발현(흔한 오해와 달리, 1990년 이전에는 한국 국회의원 선거에서 지역주의가 그다지 강력하지 않았다. 그 구체적인 내용은 )`과 함께 탄생한 것과 달리, 강원도의 보수적 표심은 1950년대부터 형성되었다. 강원도는 한국전쟁의 전선이 고착화된 시기(1951~ 53) 고지전이 일상적으로 일어난 주요 전장이었고, 지형이 험해서 도시화가 쉽게 진행되지 않아서 유권자의 정치적 의견교환이 쉽지 않았다. 일반적인 농촌의 보수적 표심에 국방안보와 반공에 대한 열망까지 합쳐져서, 군사정권을 강력하게 지지하는 공간이 되었다. 1971년 총선에서 민주당계 정당(신민당, 국민당)이 경상북도(전체 24석)에서 9석이 당선되었을 그 때에도, 강원도(전체 9석)에서는 불과 1석만 확보할 수 있었다. 1선거구에서 2명(2위까지)이 당선되던 1985년 총선의 지역구 6곳에서도, 김영삼과 김대중이 참여한 신한민주당은 모두 3등 이하로 낙선했고, 보수주류 집권당(민주정의당)이 전원 1위로 당선, 1기 군사정권 출신으로 구성된 한국국민당이 4곳에서 2등으로 당선되었다. 
 
-하지만 현대까지 이어져 오는 보수적인 강원도 표심의 근원을 알기 위해서는, 정당과 관변단체의 지역조직을 알아야 한다. 이승만이 소속된 1950년대 집권당이자 보수주류 정당인 자유당은 경찰과 지방관청의 힘을 빌려, 한국에서 최초로 전국 시·군·구 단위의 지구당 조직을 완비했다. 이 조직은 단순히 당의 행사나 선전사업의 인력으로 동원하는 데에 머무르지 않고, 모든 유권자가 혈연/학연/지연을 통해 2~ 3다리만 건너면 자유당과 연결되도록 하는 일종의 득표관리조직의 역할을 한다. 이러한 관리조직은 민주공화당(박정희)과 민주정의당(전두환)까지 이어져서 현재 보수주류 정당의 강고한 지역조직으로 남아있다. 이와 유사하게 1970년대부터 90년대까지 보수주류 정당 집권 시절의 중앙정부가 나서서 `3대 관변단체(중앙정부 차원에서 별도의 "조직육성법" 법률을 마련한 3개 단체인 한국자유총연맹, 새마을운동중앙회, 바르게살기운동중앙협의회를 일컫는다. 이들 관변단체는 모두 중앙정부 및 지방정부로부터 보조금을 받고 시설을 무상으로 사용할 권한을 가지는데, 이 권한은 "조직육성법"을 통해 보장받는다.)`의 조직을 만들어서, 구·시·군, 읍·면·동, 통·반·리 단위로 보수주류 정당의 목소리를 대변하는 조직이 건설되기도 했다. 이런 조직의 힘은 전국의 모든 지역에 존재하지만, 강원도처럼 산세가 험하여 다른 마을과 교류가 힘든 '좁은 사회' 안에서는 조직의 힘이 특히 강하다. 다른 조직이나 자원이 접근하기 어려운 마을 안에서, 정부의 행정권력을 통해 자원을 확보한 조직은 '매마른 지역 안에서 가장 샘물이 풍부하게 흐르기 때문에' 독보적인 영향력을 행사할 수 있기 때문이다. 대통령 및 강원도지사 선거같은 도 단위 선거에서는 그나마 이 조직의 영향이 적지만, 작은 행정구역을 중심으로 진행되는 지역구국회의원, 강원도의회, 구·시·군의 장 선거에서는 조직의 힘이 강력하다. 
+하지만 현대까지 이어져 오는 보수적인 강원도 표심의 근원을 알기 위해서는, 정당과 관변단체의 지역조직을 알아야 한다. 이승만이 소속된 1950년대 집권당이자 보수주류 정당인 자유당은 경찰과 지방관청의 힘을 빌려, 한국에서 최초로 전국 시·군·구 단위의 지구당 조직을 완비했다. 이 조직은 단순히 당의 행사나 선전사업의 인력으로 동원하는 데에 머무르지 않고, 모든 유권자가 혈연/학연/지연을 통해 2~ 3다리만 건너면 자유당과 연결되도록 하는 일종의 득표관리조직의 역할을 한다. 이러한 관리조직은 민주공화당(박정희)과 민주정의당(전두환)까지 이어져서 현재 보수주류 정당의 강고한 지역조직으로 남아있다. 이와 유사하게 1970년대부터 90년대까지 보수주류 정당 집권 시절의 중앙정부가 나서서 `3대 관변단체(중앙정부 차원에서 별도의 "조직육성법" 법률을 마련한 3개 단체인 한국자유총연맹, 새마을운동중앙회, 바르게살기운동중앙협의회를 일컫는다. 이들 관변단체는 모두 중앙정부 및 지방정부로부터 보조금을 받고 시설을 무상으로 사용할 권한을 가지는데, 이 권한은 "조직육성법"을 통해 보장받는다.)`의 조직을 만들어서, 구·시·군, 읍·면·동, 통·반·리 단위로 보수주류 정당의 목소리를 대변하는 조직이 건설되기도 했다. 
+
+물론 이런 조직의 힘은 전국의 모든 지역에 존재한다. 그러나 강원도처럼 산세가 험하여 다른 마을과 교류가 힘든 '좁은 사회' 안에서는 조직의 힘이 특히 강하다. 다른 조직이나 자원이 접근하기 어려운 마을 안에서, 정부의 행정권력을 통해 자원을 확보한 조직은 '메마른 지역 안에서 가장 샘물이 풍부하게 흐르기 때문에' 독보적인 영향력을 행사할 수 있기 때문이다. 대통령 및 강원도지사 선거처럼 도 단위로 치르는 선거에서는 그나마 이 조직의 영향이 적지만, 작은 행정구역을 중심으로 진행되는 지역구국회의원, 강원도의회, 구·시·군의 장 선거에서는 조직의 힘이 강력하다. 
 
 1990년 이후 강원도 보수주류 정당의 강고한 벽을 제3세력 정당들이 조금이나마 뚫어낸 경우가 없지는 않다. 92년 총선에서는 이북 강원도 태생의 정주영이 창당한 제3지대 정당(통일국민당)이, 96년 총선에서는 1기 군사정권 인사로 구성되어 보수주류 정당보다도 더욱 보수적이었던 충청권 제3정당(자유민주연합)이 각각 9개, 7개의 지역구에서 30% 이상의 득표율을 올려서 각각 4석, 2석을 당선시켰다(전체 14개, 13개). 
-하지만 이 벽을 제대로 무너뜨린 것은 바로, 남북관계의 개선이었다. 민주당계 정당(새천년민주당)이 집권당이 된 후인 2000년 총선에서, 대북교류의 물꼬가 트이고 선거일 3일 전(4월 10일)에 남북 정상회담 6월 개최 예고가 발표되자, 민주당계 정당이 강원도의 9석 중 5석을 석권할 수 있었다. 이후 민주당계 정당의 강원도 성적은 남북관계의 진전 여부에 따라 극과 극을 달렸다. 개성공단과 금강산 관광이 일상화되었던 2008년에도 8석 중 4석(민주당계 무소속 2석 포함)을 차지했지만, 연평도 포격사건의 여파가 가시지 않았던 2012년 총선에는 9석을 모두 보수주류 정당이 차지한다. 가장 최근의 극단적인 예시는 남북 정상회담 직후에 열린 2018년 지방선거로, 민주당계 정당(더불어민주당)이 강원도에서 구·시·군의 장 11석과 도의원 35석(전체 18석, 46석)을 차지했다. 14년 지방선거에서 민주당계 정당의 성적은 1석, 6석에 불과했다. 
+하지만 이 벽을 제대로 무너뜨린 것은 바로, 남북관계의 개선이었다. 민주당계 정당(새천년민주당)이 집권당이 된 후인 2000년 총선에서, 대북교류의 물꼬가 트이고 선거일 3일 전(4월 10일)에 남북 정상회담 6월 개최 예고가 발표되자, 민주당계 정당이 강원도의 9석 중 5석을 석권할 수 있었다. 이후 민주당계 정당의 강원도 성적은 남북관계의 진전 여부에 따라 극과 극을 달렸다. 개성공단과 금강산 관광이 일상화되었던 2008년에도 8석 중 4석(민주당계 무소속 2석 포함)을 차지했지만, 연평도 포격사건의 여파가 가시지 않았던 2012년 총선에는 9석을 모두 보수주류 정당이 차지한다. 가장 최근의 극단적인 예시는 남북 정상회담 직후에 열린 2018년 지방선거로, 민주당계 정당(더불어민주당)이 강원도에서 구·시·군의 장 11석과 도의원 35석(전체 18석, 46석)을 차지했다. 14년 지방선거에서 민주당계 정당의 당선 성적은 1석, 6석에 불과했다. 
 
 
 #### 주목할 지역
@@ -190,5 +209,5 @@
 ##### 강원 홍천군-철원군-화천군-양구군-인제군
 **전국 최대 면적 선거구**
 전국에서 가장 넓은 선거구가 이 곳이다. 이 곳은 춘천을 둘러싸는 5개 군이 합쳐진 선거구로, 강원도 전체 면적의 1/3을 차지하고, 고성군을 제외한 강원도 DMZ 접경지대 전체를 포괄한다. 
-여러 행정구역이 합쳐진 선거구에서는 보통, 각 구·시·군마다 자기 지역 출신의 후보를 선출하려는 소小지역주의가 발현하곤 한다. 이 지역구에서는 이 문제가 특히 심각할 것이다. 접경지대인 철원-화천-양구-인제와 춘천 남단에 위치한 홍천은 춘천시와 한강으로 갈라져서, 하나의 지역구라는 정체성을 가지는 것이 도저히 불가능하다. 2016년 총선에서는 민주당계 정당(조일현)과 보수주류 정당(황영철) 후보가 모두 홍천군 태생이었는데, 이 때문에 철원 태생의 정해용(무소속) 후보가 철원-화천-양구-인제에서 다득표하여 14.61%의 득표율을 기록하기도 했다. 정해용은 철원에서 33.65%의 득표율로 조일현을 제치고 2위를 기록했지만, 홍천에서는 4.14%밖에 득표하지 못한다.
+여러 행정구역이 합쳐진 선거구에서는 보통, 각 시·군마다 자기 지역 출신의 후보를 선출하려는 소小지역주의가 발현하곤 한다. 이 지역구에서는 이 문제가 특히 심각할 것이다. 접경지대인 철원-화천-양구-인제와 춘천 남단에 위치한 홍천은 춘천시와 한강으로 갈라져서, 하나의 지역구라는 정체성을 가지는 것이 도저히 불가능하다. 2016년 총선에서는 민주당계 정당(조일현)과 보수주류 정당(황영철) 후보가 모두 홍천군 태생이었는데, 이 때문에 철원 태생의 정해용(무소속) 후보가 철원-화천-양구-인제에서 다득표하여 14.61%의 득표율을 기록하기도 했다. 정해용은 철원에서 33.65%의 득표율로 조일현을 제치고 2위를 기록했지만, 홍천에서는 4.14%밖에 득표하지 못한다.
 
