--- a/06_남부지방 권역.md
+++ b/06_남부지방 권역.md
@@ -106,7 +106,7 @@
 ##### 
 
 ### 제주특별자치도
-**'뭍'과 분리된 제주도의 특수한 사회환경, 그로 인해 벌어진 아픈 역사. 제주도의 표심을 이해하는 키워드이다.**
+**'뭍'과 분리된 제주도의 특수한 사회환경, 그로 인해 벌어진 아픈 역사. 전국에서 가장 진보적인 목소리를 내는 제주도의 표심을 이해하는 키워드이다.**
 
 제주도에서 국회의원 총선거는 언제나 아픈 기억을 떠올리게 한다. (남북한 통합 총선거가 아닌) 남한 단독의 총선거와 정부수립을 반대하는 시민과 경찰이 충돌하여, 1948년부터 6년간 학살이 지속되었던 제주 4·3 사건 때문이다. 1988년부터 한국 총선은 4월 초중순에 시행되었고, 때문에 제주도 각지에서 4·3 추념 행사와 합동 제사를 지내는 4월 초를 거치면, 그 기억과 감각은 유권자에게 남아 제주도 선거구도에 알게 모르게 영향을 끼칠 수 밖에 없다.
 
