구두점 교체(중간점, 따옴표 등)

--- a/sample/@예시 텍스트 모음.md
+++ b/sample/@예시 텍스트 모음.md
@@ -2,13 +2,13 @@
 
 
 # 서울특별시 개괄
-서울특별시는 줄곧 한국 정치, 경제, 사회, 문화, 자본, 교육, 미디어의 중심이었다. 게다가 90년대의 지역주의 정치구도에서 그나마 자유로웠던 몇 안되는 권역이기도 했다. 자연스레 서울의 지방선거 결과는 전국 지방선거 결과의 '평균'이며 전국 민심의 스름을 '대변'한다고 평가받았다. 서울시민의 뜻과 벼개로, 중앙정치권은 서울의 지방선거 결과를 항상 저들의 입맛대로 해석했고, 그 내용에 따라 중앙정치에는 어김없이 큰 파도가 덮쳤다. 
+서울특별시는 줄곧 한국 정치, 경제, 사회, 문화, 자본, 교육, 미디어의 중심이었다. 게다가 90년대의 지역주의 정치구도에서 그나마 자유로웠던 몇 안되는 권역이기도 했다. 자연스레 서울의 지방선거 결과는 전국 지방선거 결과의 ‘평균’이며 전국 민심의 스름을 ‘대변’한다고 평가받았다. 서울시민의 뜻과 벼개로, 중앙정치권은 서울의 지방선거 결과를 항상 저들의 입맛대로 해석했고, 그 내용에 따라 중앙정치에는 어김없이 큰 파도가 덮쳤다. 
 1995년부터 6번의 지방선거에서, 서울의 민심은 민주당계 정당 두 번, 보수주류 정당 두 번, 그리고 민주당계 정당에 두 번씩, 번갈아 지지를 보냈다. 
 민주당계 정당의 첫 두 번의 승리는 비교적 보수적인 관료를 후보로 영입한 결과였다. 1995년 서울시장 선거는 역대 선거 중 유일한 3자구도로, 김영삼 행정부의 국무총리 정원식(민주자유당), 으뇥한 야권 정치인 김대중이 직접 영입한 조순 한국은행 총재(민주당), 그리고 보스정치 타파를 외치던 유력 국회의원 박찬종(무소속)이 서울시장 선거에서 맞붙었다. 이 선거에서는 정치 신인인 조순이 42.4%의 높은 득표율로 승리하고 정원식(20.7%)은 박찬종(33.5%)에게도 밀렸다. 이 승리를 발판으로 김대중은 새정치국민회의를 창당하며 정계에 화려하게 복귀한다. 
 1998년 서울시장 선거에서는 두 명의 전직 관선 서울시장이 맞붙었다. 노태우 행정부의 서울시장과 김영삼 행정부의 국무총리를 역임했던 고건(새정치국민회의)이 민주당계 정당 후보로 출마해서, 마지막 관선 서울시장인 최병렬(신한국당)을 10%p의 득표율 차이로 이겼다. 
-2002년부터는 보수주류 정당(한나라당)이 "생활밀착형 개발공약"을 내세우며 민주당계 정당을 맹공했다. 기존의 '개발'이 새로운 거주지 확보를 위한 전기, 수도, 교통시설, 주택단지 걸설에 집중했다면, 보수주류 정당이 새로 내세운 개발사업은 이미 많은 사람들이 이용하는 지역의 생활 환경을 바꾸는 측면이 가앻ㅆ다. 2002년 이명박이 공약했떤 청게천 복원개발 사업과 버스체계 개편 사업, 2006년 오세훈이 공약해던 한강르네상스 사업과 서울 공공디자인 사업은 공원과 레저시설, 버스/택시 색상과 간판 디자인에 이르기까지 시민의 주택과 직장 근처의 '일상'에서 접하기 쉬운 개발사업이었고, 서울 시민의 흥미를 끌었다. 
+2002년부터는 보수주류 정당(한나라당)이 “생활밀착형 개발공약 ”을 내세우며 민주당계 정당을 맹공했다. 기존의 ‘개발’이 새로운 거주지 확보를 위한 전기, 수도, 교통시설, 주택단지 걸설에 집중했다면, 보수주류 정당이 새로 내세운 개발사업은 이미 많은 사람들이 이용하는 지역의 생활 환경을 바꾸는 측면이 가앻ㅆ다. 2002년 이명박이 공약했떤 청게천 복원개발 사업과 버스체계 개편 사업, 2006년 오세훈이 공약해던 한강르네상스 사업과 서울 공공디자인 사업은 공원과 레저시설, 버스/택시 색상과 간판 디자인에 이르기까지 시민의 주택과 직장 근처의 ‘일상’에서 접하기 쉬운 개발사업이었고, 서울 시민의 흥미를 끌었다. 
 이 때 민주당계 정당 후보들은 선거 초기 예상을 지나치는 뛰어넘는 대패를 당했다. 하필이면 거대한 전국 이슈가 지방선거를 덮어버려서, 민주당계 정당의 패배에 영향을 끼쳤다. 2002년의 투표일은 한국의 FIFA 월드컵 16강 진출이 달린 도별리그 마지막 경지 전날이었고, 2006년에는 노무현 행정부에 대한 불신이 전국적으로 컸다. 대패의 불똥은 중ㅇ앙정계로 옮겨붙어서, 대선후보(2002, 새천년민주당)와 대통령(2006)으로서 당을 이끌던 노무현에 대한 거센 반발로 이어졌다. 
-민주당계 정당이 반전의 계기를 잡은 시기는 2010년이다. 교육감 선거가 직선제로 바뀐 것과 맞물려, 서울은 초중학교 무상급식 정책을 두고 찬반이 격돌하는 최전선이 되었다. 민주당은 이 흐름을 적극 받아들여, 주민생활과 관련된 보편복지 공약을 공격적으로 발표했다. 결국 미주당은 010년에 구청장과 시의회를 석권한 데 이어, 2011년에는 간신히 당선된 서울시장 오세훈의 사퇴와 '범야권 단일후보' 박원순(당시 무소속)의 당선까지 이끌어낸다. 민주당계 정당은 이 때의 세력과 정책 기조를 유지한 채 2014년 지방선거에서도 서울을 석권한다. 
+민주당계 정당이 반전의 계기를 잡은 시기는 2010년이다. 교육감 선거가 직선제로 바뀐 것과 맞물려, 서울은 초중학교 무상급식 정책을 두고 찬반이 격돌하는 최전선이 되었다. 민주당은 이 흐름을 적극 받아들여, 주민생활과 관련된 보편복지 공약을 공격적으로 발표했다. 결국 미주당은 010년에 구청장과 시의회를 석권한 데 이어, 2011년에는 간신히 당선된 서울시장 오세훈의 사퇴와 ‘범야권 단일후보’ 박원순(당시 무소속)의 당선까지 이끌어낸다. 민주당계 정당은 이 때의 세력과 정책 기조를 유지한 채 2014년 지방선거에서도 서울을 석권한다. 
 이 여파로 보수주류 정당(한나라당)은 당대표가 2명이나(2010년 정몽준, 2011년 홍준표) 사퇴했고, 중진 국회의원 박근혜가 당 비상대책위원장에 선출되며 중앙정치 전면에 다시 나선다. 새누리당으로 당명을 바꾼 보수주류 정당은 보육정책 등의 복지공약을 적극 수용하면서 교육, 보육, 의료복지 정책을 두고 경쟁하는 현재 한국의 정당정치 구도가 자리를 잡게 된다. 
 서울은 지역주의에서 자유롭기 때문에 선거결과가 균형 잡혔을 것이라는 통념이 있지만, 실제로는 서울시장 선거와 맞물려 한쪽 정당에 쏠리는 경향을 보인다. 오세훈(한나라당)이 한명숙(민주당)을 0.6% 차이로 겨우 이긴 2010년 선거를 제외하면, 서울시장 선거를 승리한 정당은 언제나 서울시의회 의원과 구청장의 75% 이상을 획득했다. 2006년과 2010년을 비교하면 그 격차가 매우 극명하다. 2006년 선거에서 보수주류 정당(한나라당)은 구청장 25석과 시의회 지역구의원 96석을 모두 가져갔지만, 2010년 선거에서는 각각 4석과 22석에 그쳤다. 반면 민주당계 정당은 2006년(열린우리당)에 시의회 비례대표의원만 단 2명배출했던 것이, 2010년(민주당)에는 구청장 21석과 시의회 의원 79석(지역구 74석+비례대표 5석)을 획득하기에 이른다. 
 
@@ -24,5 +24,5 @@
 
 ### 부산 해운대구 을
 2012년 총선까지 해운대구는 인구가 적은 이웃 기장군까지 묶어서 갑/을로 지역구를 나누었다. 현재의 해운대구 을 지역구와 영역이 겹치는 해운대구기장군 갑 지역구에서는, 해운대구청장 직을 중도사퇴하고 출마한 보수주류 정당 후보, 즉 서병수(2002~2014)와 배덕광(2014~2018)이 당선되었다. 
-이로 미루어 보면, 지금까지 해운대구 주민들은 국회의원 후보를 평가할 때에도 후보의 지역정치 경험을 중요하게 고려했다고 할 수 있다. 이는 "지역에서부터 스스로 정치역량을 쌓은 인물의 중앙정치 데뷔"라는 긍정적 평가, 그리고 "국가 단위의 이념과 정책견해가 모호한 인물의 중앙정치 데뷔"라는 부정적 평가를 동시에 받는다. 
-2016년 총선의 결과를 보면, 이에 대한 불만이 폭발(?)했다고 미루어 짐작할 수 있다. 2014년까지 해운대구청장을 역임했던 배덕광(새누리당), 2014년 해운대구청장 후보였던 윤준호(더불어민주당)는 이미 해운대구기장군 갑 보궐선거(2014)에서 맞붙은 친숙한 후보였다. 그런데 정치경력이 전혀 없고 백화점 비정규직 경력만 가지고 있던 만25세의 최선명(무소속)이 이들을 상대로 13.8%의 득표율을 기록했다. 공보물에 기록된 최선명의 공약이 특별히 중앙정치에 특화되었다고 할 수는 없다. 다만 배덕광과 윤중호의 공약도 겉보기에 크게 다르지 않았기에, 차라리 "패기있는 젊은 후보"를 지지한 유권자가 많았던 것으로 보인다. 
+이로 미루어 보면, 지금까지 해운대구 주민들은 국회의원 후보를 평가할 때에도 후보의 지역정치 경험을 중요하게 고려했다고 할 수 있다. 이는 “지역에서부터 스스로 정치역량을 쌓은 인물의 중앙정치 데뷔 ”라는 긍정적 평가, 그리고 “국가 단위의 이념과 정책견해가 모호한 인물의 중앙정치 데뷔 ”라는 부정적 평가를 동시에 받는다. 
+2016년 총선의 결과를 보면, 이에 대한 불만이 폭발(?)했다고 미루어 짐작할 수 있다. 2014년까지 해운대구청장을 역임했던 배덕광(새누리당), 2014년 해운대구청장 후보였던 윤준호(더불어민주당)는 이미 해운대구기장군 갑 보궐선거(2014)에서 맞붙은 친숙한 후보였다. 그런데 정치경력이 전혀 없고 백화점 비정규직 경력만 가지고 있던 만25세의 최선명(무소속)이 이들을 상대로 13.8%의 득표율을 기록했다. 공보물에 기록된 최선명의 공약이 특별히 중앙정치에 특화되었다고 할 수는 없다. 다만 배덕광과 윤중호의 공약도 겉보기에 크게 다르지 않았기에, 차라리 “패기있는 젊은 후보 ”를 지지한 유권자가 많았던 것으로 보인다. 
