--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -5,7 +5,9 @@
 **국회가 ‘민의의 전당’인 이유가 무엇일까? 이 공간에 살고 있는 모든 개인의 권리가 보장되고 이익이 증진되도록, 모든 개인의 의견을 모아 논의하는 자리이기 때문이다.**
 
 ### 국회운영위원회(운영위) #2, 정무위원회(정무위) #2
-운영위와 정무위가 담당하는 중앙정부기관 중에, 개인의 권리와 직접 연관된 중요한 기관 2곳이 있다. 국가인권위원회(운영위 소관)는 정부, 기업 등의 집단이 개인이 마땅히 누려야 할 권리를 보장하지 않거나 침해할 경우, 이를 조사하고 시정할 것을 권고하는 기관이다. 국민권익위원회(정무위 소관)는 공공기관의 부패로 인해 개인이 부당하거나 불공평하게 피해를 보는 사례를 조사하고 
+운영위와 정무위가 담당하는 중앙정부기관 중에, 개인의 권리와 직접 연관된 중요한 기관 2곳이 있다. 국가인권위원회(운영위 소관)는 정부, 기업 등의 집단이 개인이 마땅히 누려야 할 권리를 보장하지 않거나 침해할 경우, 또는 개인을 차별하는 경우, 이를 조사하고 시정할 것을 권고한다. 국민권익위원회(정무위 소관)는 공공기관의 부패 또는 행정조치로 인해 개인이 부당하거나 불공평하게 피해를 보는 사례를 조사하고 평가 및 제도개선을 권고한다. 개인의 권리가 직접 침해당할 때 제일 먼저 진정을 넣을 수 있는 기관들이다. 따라서 이들 기관의 업무, 그리고 이들 기관이 직접 제안하는 법률안은, 개인의 권리를 보호하는 측면에서 매우 중요하다. 
+
+행정부의 다른 부처들 입장에서, 국가인권위원회와 국민권익위원회는 자신의 업무에 '사사건건 간섭하는' 골치아픈 부서처럼 여겨진다. 게다가 두 위원회의 권고는 말 그대로 강제력 없는 권고일 뿐이라서, 두 위원회의 위상과 권한에 확실하게 힘이 실리지 않으면 행정부 각 부처가 이들을 무시하고 두 위원회의 존재가 유명무실해질 위험이 크다. 이를 막기 위한 국회의 역할이 중요하다. 운영위와 정무위는 국가인권위원회/국민권익위원회의 업무가 정부의 다른 부처에 의해 침해되거나, 이들의 권고가 합당한 이유 없이 계속해서 무시되지 않도록 감사하고, 조사에 필요한 인력과 예산이 충분히 배정되도록 하는 역할을 맡는다. 
 
 ### 보건복지위원회(복지위) #1
 보건복지위원회는 보건복지부와 식품의약품안전처, 즉 중앙정부가 집행하는 보건위생 및 복지정책을 모두 다룬다. 여기에는 건강보험과 국민연금을 비롯한 공적연금, 병원-보건소로 구성된 공공/사립의료체계와 의사·간호사·약사의 처우, 영유아 보육과 어린이집 관리, 노인과 장애인의 복지 및 생활지원정책 등이 모두 포함되어, 사회경제적 취약계층의 의료와 생활에 직접 연관된 사항 전반을 다룬다.  
@@ -13,36 +15,58 @@
 모든 시민이 곧 일하는 노동자이기 때문에, 노동 문제는 곧 모든 시민의 권리와 복리후생을 결정하게 된다. 
 ### 여성가족위원회(여가위) #1
 
+한다면, 한국 사회는 생활공동체의 
+
 ## 외교안보, 안전, 방재 관련
-**
+**개인이 권력을 조금씩 위임해서 공동체에 저축해놓으면, 공동체는 그 권력을 이용해 외부 위협으로부터 개인을 지켜야 한다. 그 공동체의 이름은 국가이고, 그 공동체가 권력을 잘 쓰도록 이끄는 것이 국회의 역할이다.** 
 
 ### 외교통일위원회(외통위)
-외교통일위원회는 외교부와 통일부 소관 업무를 담당한다. 
-행정부의 외교통일정책 결정과정에서 의회의 영향력이 별로 없는 한국의 특성상
+외교통일위원회는 외교부와 통일부 소관 업무를 담당한다. 그러나 안타깝게도, 행정부의 외교통일정책을 외통위에서 직접 논의하는 경우는 찾기 힘들다. 외교, 통일 등 '외치' 분야에 있어서, 의회에서 오랫동안 큰 정책방향을 토론하고 행정부에 적용하는 것이 아니라, 행정부의 수반인 대통령이 외교부 관료나 대통령비서실과 국가안보실의 관련 보좌관과 함께 정책을 짜서 그대로 추진하는 경우가 많기 때문이다. 외교통일정책에 있어서 자신들의 영향력이 별로 없다는 것을 국회의원들도 잘 알고 있다. 국회에서 외교통일 정책에 대한 질의는 새로운 외교현안에 대한 논의보다는, 행정부 외교통일 정책을 비평하는 수준에 머무르고 있으며, 질의의 내용도 대중적인 관심을 받기 좋은 대북, 대미, 대일, 대중외교에 치우쳐있다. 한국이 강소국으로서 유럽, 남미, 동남아시아, 아프리카 등과 교류하는 문제는 거의 거론되지 않으며, 정무적 차원에서 외교문제를 잘 다루는 의회정치인이 등장하지 않는 데에는 이런 배경이 있다. 
+
+이런 현실에서, 외통위는 주로 행정처리기관으로서의 외교부와 통일부에 대한 감사 역할을 맡게 된다. 각국 대사관/공사관의 업무, 개성공단 등 남북교류 사업에서의 민원성 업무처리문제 등이 국정감사에서 주로 논의된다. 사실 이 문제는 단순한 민원처리 수준을 넘어선다. 외국 사법부에 의해 한국 국민이 부당한 감옥살이 또는 인권침해를 겪는다던가, 한국 국민의 신체와 재산이 억류되는 상황이 논의되기 때문이다. 이런 문제가 외교부나 통일부의 관심을 충분히 받지 못해서 제대로 해결되지 못할 때, 외통위의 국정감사에서 논의되는 것은 문제해결을 위해 큰 도움이 된다. 
 
 ### 국방위원회(국방위)
-국방위원회는 국방부 및 국방과 관련된 업무를 소관한다. 
+국방위원회는 국방부 및 국방과 관련된 업무를 소관한다. 한국의 국방예산은 중앙정부 `전체 예산의 약 10%(2020년도 예산안 기준 약 50조 2천억 원)`를 차지하고, 한국군은 약 60만 명의 상비군으로 이뤄진 거대한 일터이자 생활공간이다. 한국군 내에서 예산의 쓰임, 구조개편, 경제활동, 생활수준 및 인권상황은 한국 사회 전체에 거대한 영향을 미치는 문제가 아닐 수 없다. 국방위에서 논의되어 효과를 발휘하는 분야는 상당히 넓다. 국방위에서는 한국군의 작전계획 및 장기적인 구조개편, 신무기 도입, 방위산업 비리, 보급품 품질 문제, 한국군 내 병사처우 문제, 인권탄압 사례, 징집 및 병무관리 등등 군 관련 문제 전반이 논의된다. 군 장성 출신 국회의원이 상급 직업군인이나 군대 내 군사전문가의 입장을 대변한다면, 민간인 출신 국회의원은 하급 직업군인이나 민간의 군사전문가, 징집병의 입장을 대변하여 한국군 내 문제를 다룬다. 
+
+한국군의 문제는 북한과의 관계에서 중요한 위치를 차지한다. 북한과의 군사충돌 상황이 벌어지면 국방위는 국방부로부터 그 상황을 보고받고 향후 대응에 대한 토론을 벌인다. 교류를 확대할 때에는 군비를 축소하거나 군사시설을 조정하는 문제, 남북 고위급 군사회담의 결과에 대한 토론을 벌인다. 뿐만 아니라, 한국군의 문제는 국제적 문제의 중심에 서기도 한다. 한국군(특히 한국 육군)은 국제적으로 열 손가락 안에 꼽히는 상당한 규모와 질적 수준을 자랑하는 만큼, 한국군이 특정 해외분쟁에 파병하여 개입하느냐 마느냐는 국제적으로 상당한 이슈가 된다. 2003년 한국군의 이라크 파병 문제는 국제정세 차원의 중요 이슈로 국방위에서 논의되었고, 한국 국회가 전세계의 주목을 받는 계기가 되었다.
 
 ### 정보위원회(정보위)
 정보위원회는 국가정보원(국정원) 담당업무를 소관한다. 쓸 것이 없어서 더 이상의 자세한 설명은 생략한다.
+
 …
+
 정말이다. 정보위는 베일에 쌓인 위원회다. <국회법>에 의해 정보위의 소속 의원은 12명으로 제한되고, (인사청문회와 공청회를 제외한) 모든 회의는 비공개로 하도록 규정되었다. 정보위 회의의 대부분은 국가정보원장이 출석하여 정보위 위원들에게 국정원이 조사한 각종 정보를 보고하는 내용으로 채워질 것으로 ‘추정’되며, 위원장과 각 정당 간사들은 보고받은 내용을 추려서 회의 직후 기자들에게 공개할 따름이다. 따라서 국정원의 구조와 업무를 규정하는 법률을 바꾸거나, 국정원을 감독하고 예산을 심사하는 등의 일은 거의 공개되지 않는다. 어떤 일을 하는지 분명하지 않(으며, 어쩌면 실제 업무가 거의 없을 지도 모르)은 정보위이다보니, 정보위는 소속 위원이 다른 상임위원회 위원도 겸직할 수 있는 ‘겸임 상임위원회’로 규정되어 있다.
 
 ### 행정안전위원회(행안위) #2
-행정안전위원회의 소관사항에는 시민에게 가장 가까이 있는 중앙관청들도 포함된다. 경찰청과 소방청이다.  
+행정안전위원회의 소관사항에는 시민에게 가장 가까이 있는 중앙관청들도 포함된다. 바로 경찰청과 소방청이다. 이들 관청의 구조, 이들에게 배정되는 인력과 예산은 모두 행정안전위원회의 
+
+범죄 및 재난현장에 가장 먼저 출동하고, 조사(수사) 및 수습처리 과정의 최일선에서 근무하는 경찰 및 소방관의 처우와 관련
 
 ### 보건복지위원회(복지위) #2
-코로나바이러스-19가 한국 사회에 던져준 것은, 이료 
+코로나바이러스감염증-19는 의료보건 문제가 그 자체로 거대한 재난이 될 수도 있다는 교훈을 한국 사회에 심어주었다. 감염병 뿐만 아니라 각종 재난, 재해, 대형사고 상황에서 공공의료보건이 얼마나 잘 작동하느냐에 따라 개인과 국가에 미치는 피해 규모를 크게 줄일수도, 늘일수도 있다.
+
+공공의료체계의 구조는 대부분 법률로 규정된다. 보건
+
+그 외에도, 식품의약품안전처. 2010년대 중후반을 뒤흔든 가습기살균제에 의한 피해는 
+
 ### 환경노동위원회(환노위) #2
+개인에게 닥쳐오는 재해의 상당 부분이 개인의 일터와 관련이 있다. 제조업이나 건설업과 같은 전통적인 노동현장에서 추락, 절단, 독성물질 누출 사고. 사무실에서 일하는 직업에서 나타나는 과로사, 정신건강 손상. 도시 시스템을 유지하는데 필수적인 일터에서의 교통사고, 근골격계 손상, (자유로운 화장실 사용이 불가능함에 따른) 배뇨기관 손상 등등. 뿐만 아니라, 일터에서 환경규제를 지키지 않고 각종 독성물질을 하수나 배기가스, 산업쓰레기의 형태로 배출할 때에도 국가적인 재해가 될 수 있다(전국 각지에서 방사성 라돈이 사용된 제품이 적발되었던 것을 기억해 보자). 이런 재해가 일어나지 않도록 사전에 예방하려면, 법률을 통해 안전한 일터를 만드는 각종 노동규제와 환경규제를 보강하고 처벌규정을 강화하며, 노동부, 노동청이 제대로 일하도록 감사하는 역할을 환경노동위원회가 맡아야 한다. 
+
 ### 여성가족위원회(여가위) #2
-한국 시민의 많은 생활이 여전히 가족단위에 
+한국 시민의 많은 생활이 여전히 가족단위에서 이뤄지므로, 개인의 생활이 안전해지기 위해 행정부가 가족정책에 개입할 부분이 많다. 예를 들어, 전통적으로 '가족' 영역에 속하지 않아 안전에 취약해지는 계층(가출 청소년이나 가출한 가족구성원, 동거하지만 결혼할 권리를 보장받지 못하는 동성커플이나 노년커플 등)을 보호할 제도나 시설을 확충해야 하고, 가족 내에서 학대받은 피해자가 탈출하여 보호받을 시설을 만들고 가해자의 양육권을 박탈하는 조치가 필요하다. 이상의 행정을 지휘하고 제도를 도입하는 중앙행정부처가 바로 여성가족부고, 국회 안에서 이런 문제를 논의하는 곳이 여성가족위원회다. 특히 2010년대부터 성폭력이나 불법촬영물 피해 등 개인에게 심각한 재해가 되는 성범죄 문제가 부각되는 상황에서, 여가위는 '방재 및 재난피해지원' 차원에서 끓어오르는 사회적 요구를 심도있게 논의할 수 있는 공간이다.
 
 #### 서울 강동구 갑: 진선미
 
 #### 광주 광산구 을: 권은희
 
 ## 교육, 문화, 학문 관련
+**활기있는 사회는 부유함 만으로 이룰 수 없다. 배우고, 가르치고, 즐기고, 통찰하고, 상상하여, 사회 전반의 이성과 감성과 신체를 일깨워야 한다. 이런 작업에 국가 예산과 행정력이 투입되어야 한다. 당장은 쓸모없어 보이더라도.**
+
 ### 교육위원회(교육위)
+유치원, 초등학교, 중학교, 고등학교, 대학교, 대학원, 평생교육과 관련된
+
+
+
 ### 과학기술정보방송통신위원회(과기정통위) #1
 ### 문화체육관광위원회(문체위)
 
